修改反射初始化，使用新方法